--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </div>
         
-    <script src="/index.js"></script>
-    
+    <script src="/index.js" defer></script>
+
 </body>
 </html>
