--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch A Sketch</title>
 
+    <!-- CSS link -->
     <link rel="stylesheet" href="style.css">
+    
+    <!-- javascript link -->
+    <script src="index.js" defer></script>
 </head>
 <body>
 
@@ -40,8 +44,6 @@
         </div>
 
     </div>
-        
-    <script src="/index.js" defer></script>
 
 </body>
 </html>
